# mbpol_benchmark_polynomials

./: .CMakeLists.txt.swp  .cuda_2b_direct.h.swp  .gitignore  .run_test.cpp.swp  CMakeLists.txt  README.md  count_operations.py  cpu_direct.cpp  cpu_direct.h  cpu_maple.cpp  cuda_2b_direct.h  cuda_2b_maple.h  direct_gradient.cpp  evaluate_2b_poly.c  poly-2b-v6x-nogrd.cpp  poly-2b-v6x-nogrd.h  poly-2b-v6x.cpp  rewrite.c  run_test.cpp  temp.c  two_body.ipynb  x2b-v6x-direct.cpp
2b_no_gradients/: poly-model.h
include/: cpu_direct.h  cpu_maple.h  evaluate_2b_poly.h
kernels/: .2b_direct.cu.swp  2b_direct.cu  2b_direct_polynomial.cu  2b_maple.cu  2b_maple_polynomial.cu
notebooks/: two_body_executed.ipynb
